--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ div.deal_container {
   /* For mobile phones or when the screen (browser window) gets smaller than 768px */
   div.deal_container {
     width: 1600px;
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom);
   }
 }
 
