--- a/index.html
+++ b/index.html
@@ -65,17 +65,14 @@ div.deal_container {
     width: 100%;
   border-radius: 0px;
   background-color: #f2f2f2;
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
+
 }
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones or when the screen (browser window) gets smaller than 768px */
   div.deal_container {
     width: 1600px;
-    padding: env(safe-area-inset-right) env(safe-area-inset-bottom);
+    padding: env(safe-area-inset-left) env(safe-area-inset-top);
   }
 }
 
