--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ div.deal_container {
   /* For mobile phones or when the screen (browser window) gets smaller than 768px */
   div.deal_container {
     width: 1600px;
-    padding: env(safe-area-inset-left) env(safe-area-inset-top);
+    padding-left: env(safe-area-inset-left); 
   }
 }
 
