--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ div.deal_container {
     width: 100%;
   border-radius: 0px;
   background-color: #f2f2f2;
-
+  padding-left: env(safe-area-inset-left);
 }
 
 @media only screen and (max-width: 768px) {
