--- a/index.html
+++ b/index.html
@@ -878,7 +878,6 @@ function qtyToBbl(unitVal,prodVal,qtyValInsert){
 
 $(document).ready(function(){
 
-
     $('select').on('change', function(){ //attach event handler to select's change event. 
         if ($(this).val() === ""){ //checking to see which option has been picked
             $(this).addClass('unselected'); 
@@ -890,18 +889,19 @@ $(document).ready(function(){
     //populate trade underlying dropdown
     populateProduct(underlyings); //dealinit.js
 
-    sortTableRow();//dealinit.js: enable table row sort
-let detectTap = false;
+    sortTableRow();//dealinit.js: enable table row sort using touch punch
+    let detectTap = false;
 
-$('body').on('touchstart', '#dealTable input', () => {
-  detectTap = true;
-});
-$('body').on('touchmove', '#dealTable input', () => {
-  detectTap = false;
-});
-$('body').on('touchend', '#dealTable input', (e) => {
-  if (detectTap) $(e.target).focus();
-});
+    //overcome issue of touch punch unable to get text input into focus in safari
+    $('body').on('touchstart', '#dealTable input', () => {
+    detectTap = true;
+    });
+    $('body').on('touchmove', '#dealTable input', () => {
+    detectTap = false;
+    });
+    $('body').on('touchend', '#dealTable input', (e) => {
+    if (detectTap) $(e.target).focus();
+    });
 
     //populate curve checkbox options with underlyings
     populateCheckboxes(underlyings); //curve_checkbox.js
