--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<meta name="google-site-verification" content="JY7u4Udkaa29uPe3BfL21E_tsuYNSVQqJUzGBHiWOKw" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-
-
 
 <script src="js/date.js"></script>
 <script src="js/curve_dragtable.js"></script>
@@ -15,11 +16,10 @@
 <script src="js/curve_checkbox.js"></script>
 <script src="js/dealinit.js"></script>
 
-
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 <link rel="stylesheet" href="styles.css">
+
 <title>Trade Chit</title>
 
 <style>
@@ -177,6 +177,7 @@ option {
 #futExpiryTable thead,#futExpiryTable th,#futExpiryTable td{
   border: 1px solid #ddd;
   padding: 1px 5px 1px 5px;
+  text-align: center;
 }
 
 #posTable tr:nth-child(even),#priceTable tr:nth-child(even),
@@ -352,7 +353,7 @@ option {
 <button class="tablinks" onclick="openPage(event, 'tabCurve', this)">Curve Marks</button>
 <button class="tablinks" onclick="openPage(event, 'tabPnL', this)">P&L</button>
 <button class="tablinks" onclick="openPage(event, 'tabExport', this)">Export</button>
-<button class="tablinks" onclick="openPage(event, 'tabSettings', this)">Settings</button>
+<button class="tablinks" onclick="openPage(event, 'tabSettings', this)">Configuration</button>
 
 
 <div id="tabExpo" class="tabcontent">
