--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ option {
 <div id='cssmenu'>
     <ul>
         <li class='active'><a href='#'>Trade Chit</a></li>
-        <li><a href='contact.php'>Contact</a></li>
+        <li><a href='contact.html'>Contact</a></li>
     </ul>
 </div>
 
