--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,16 @@
 <html>
 
 <head>
+<link rel="stylesheet" href="styles.css">
+<title>Contact</title>
+
 <style>
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-body { background:rgb(30,30,40); }
 form { max-width:420px; margin:50px auto; }
 
 .feedback-input {
-  color:white;
+  color:black;
   font-family: Helvetica, Arial, sans-serif;
   font-weight:500;
   font-size: 18px;
@@ -56,18 +58,12 @@ textarea {
 <body>
     <div id='cssmenu'>
         <ul>
-            <li class='active'><a href='index.html'>Trade Chit</a></li>
-            <li><a href=''>Contact</a></li>
+            <li><a href='index.html'>Trade Chit</a></li>
+            <li class='active'><a href=''>Contact</a></li>
         </ul>
     </div>
 
-    <form action="https://formspree.io/einfinco@hotmail.com" method="POST">
-        <input type="email" name="_replyto">
-        <textarea name="body"></textarea>
-        <input type="submit" value="Send">
-    </form>
-
-    <h1>Contact Us</h1>
+    <h1>Contact</h1>
     <form action="https://formspree.io/einfinco@hotmail.com" method="POST">      
         <input name="name" type="text" class="feedback-input" placeholder="Name" />   
         <input name="email" type="text" class="feedback-input" placeholder="Email" />
