--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@ div.deal_container {
   padding-left: env(safe-area-inset-left);
 }
 
-@media only screen and (max-width: 768px) {
-  /*When the screen (browser window) gets smaller than 768px */
-  div.deal_container {
-    width: 1600px;
-  }
-}
+
 
 .rightButtonParent {text-align: right;}
 .leftButtonParent {text-align: left;}
@@ -180,6 +175,10 @@ option {
   text-align: center;
 }
 
+#priceTable td input{
+    width: 90px;
+}
+
 #posTable tr:nth-child(even),#priceTable tr:nth-child(even),
 #futExpiryTable tr:nth-child(even){background-color: #f2f2f2;}
 
@@ -255,6 +254,42 @@ option {
   display: block;
 }
 
+@media screen and (max-width: 768px) {
+
+    table th {display: none;}
+
+    table td {display: flex;}
+
+    table td:before {
+        /*content: attr(label);*/
+        font-weight: bold;
+        min-width: 120px;
+        border: 1px solid #ccc;
+    }
+
+    #dealTable td input,#dealTable td select,#dealTable td button,.id{
+        width: 100%;
+    }
+   
+
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "1"; }
+	td:nth-of-type(2):before { content: "2"; }
+	td:nth-of-type(3):before { content: "3"; }
+	td:nth-of-type(4):before { content: "4"; }
+	td:nth-of-type(5):before { content: "5"; }
+	td:nth-of-type(6):before { content: "6"; }
+	td:nth-of-type(7):before { content: "7"; }
+	td:nth-of-type(8):before { content: "8"; }
+	td:nth-of-type(9):before { content: "9"; }
+    td:nth-of-type(10):before { content: "10"; }
+    td:nth-of-type(11):before { content: "11"; }
+    td:nth-of-type(12):before { content: "12"; }
+    td:nth-of-type(13):before { content: "13"; }
+}
+
 </style>
 
 </head>
@@ -264,6 +299,7 @@ option {
 <div id='cssmenu'>
     <ul>
         <li class='active'><a href='#'>Trade Chit</a></li>
+        <li><a href='about.html'>About</a></li>
         <li><a href='contact.html'>Contact</a></li>
     </ul>
 </div>
@@ -312,10 +348,10 @@ option {
                 </select>
             </td>
             <td><div class="col-20">
-                <select required class="Maturity">
+                <select required class="Maturity" onchange="adjustMonths(this)">
                     <option value="" selected disabled>-Tenor1-</option>
                 </select>
-                <select class="Maturity2" title="Tenor2 for timespreads if applicable, else leave unselected">
+                <select class="Maturity2" onchange="adjustMonths(this)" title="Tenor2 for timespreads if applicable, else leave unselected">
                     <option value="" selected>-Tenor2 (if timespread)-</option>
                 </select>
             </div></td>
@@ -397,6 +433,11 @@ option {
                 <li>Curve headings(green) can be dragged/dropped to reorder columns</li>
                 <li>Curve marks can be copied from Excel ranges and pasted here</li>
             </ul>
+            <div>
+                <button onclick="adjustMonths(this)" class="bigButton" value="999">Adjust Months</button>
+                <button onclick="clearMarks()" class="bigButton">Clear Marks</button>
+            </div>
+            <br>
             <table id="priceTable">
                 <tbody>
                 </tbody>
@@ -416,7 +457,7 @@ option {
             <th>Total MTM P&L</th>
         </tr>
         <tr>
-            <td>NaN</td>
+            <td id="totalMtm">NaN</td>
         </tr>
     </table>
 </div>
@@ -426,7 +467,7 @@ option {
 </div>
 <div id="tabSettings" class="tabcontent">
     Conversion, holidays, expiry dates
-    <h3>ICE Contract Expiries</h3>
+    <h3>ICE Futures Expiry Dates</h3>
     <table id="futExpiryTable">
         <tbody>
         </tbody>
@@ -470,7 +511,8 @@ var underlyings =
     ["",""],
     ["1","Brent Fut","$/bbl","7.45"],["1A","Brent Swp","$/bbl","7.45"],
     ["2B","Dubai","$/bbl","7.45"],
-    ["3","LS Gasoil Fut","$/mt","7.45"]
+    ["3","LS Gasoil Fut","$/mt","7.45"],
+    ["4","WTI Fut","$/bbl","7.45"]
 ];
 
 //[Contract month, expiry date (month based on zero start index)]
@@ -496,7 +538,15 @@ var futExpDate =
         ["Nov-20",new Date(2020,10,12,23,59,59)],
         ["Dec-20",new Date(2020,11,10,23,59,59)]
     ],
-
+    ["WTI Fut",
+        ["Jun-20",new Date(2020,04,18,23,59,59)],
+        ["Jul-20",new Date(2020,05,19,23,59,59)],
+        ["Aug-20",new Date(2020,06,20,23,59,59)],
+        ["Sep-20",new Date(2020,07,19,23,59,59)],
+        ["Oct-20",new Date(2020,08,21,23,59,59)],
+        ["Nov-20",new Date(2020,09,19,23,59,59)],
+        ["Dec-20",new Date(2020,10,19,23,59,59)],
+    ]
 
 ];
 
@@ -883,17 +933,17 @@ $(document).ready(function(){
         if ($(this).val() === ""){ //checking to see which option has been picked
             $(this).addClass('unselected'); 
         } else {$(this).removeClass('unselected');}
+        //if ($(this).val() === "999"){adjustMonths();}
     });
 
     //populate monthly tenors in trade maturity dropdown, price table, futures expiry table
-    populateDate(); //date.js
+    populateDate(monthTenorCount); //date.js
     //populate trade underlying dropdown
     populateProduct(underlyings); //dealinit.js
 
     sortTableRow();//dealinit.js: enable table row sort using touch punch
-    let detectTap = false;
-
     //overcome issue of touch punch unable to get text input into focus in safari
+    let detectTap = false;
     $('body').on('touchstart', '#dealTable input', () => {
     detectTap = true;
     });
@@ -905,9 +955,9 @@ $(document).ready(function(){
     });
 
     //populate curve checkbox options with underlyings
-    populateCheckboxes(underlyings); //curve_checkbox.js
+    populateCheckboxes(); //curve_checkbox.js
     //populate curve price table with underlying header and input cells
-    populateTblColumn(underlyings); //curve_dragtable.js
+    populateTblColumn(); //curve_dragtable.js
     $("#priceTable").jsdragtable();
     //populate futures expiry
     populateFutExpColumn(); //date.js
