--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="styles.css">
 <title>Contact</title>
 
@@ -59,14 +62,15 @@ textarea {
     <div id='cssmenu'>
         <ul>
             <li><a href='index.html'>Trade Chit</a></li>
+            <li><a href='about.html'>About</a></li>
             <li class='active'><a href=''>Contact</a></li>
         </ul>
     </div>
 
     <h1>Contact</h1>
-    <form action="https://formspree.io/einfinco@hotmail.com" method="POST">      
-        <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-        <input name="email" type="text" class="feedback-input" placeholder="Email" />
+    <form action="https://formspree.io/einfinco@hotmail.com" method="POST">
+        <input name="name" type="text" class="feedback-input" placeholder="Name"/>
+        <input name="email" type="text" class="feedback-input" placeholder="Email"/>
         <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
         <input type="submit" value="Send"/>
     </form>
